# sig8

./: CMakeLists.txt  LICENSE
cmake/: makebundle.cmake  sig8.cmake
examples/hello/: CMakeLists.txt  main.c
src/: CMakeLists.txt  config.h.in  sig8.c  sig8_main.c
src/include/: sig8.h
src/sig8/: display.c  font.c  fs.c  graphics.c  image.c  palette.c  sig8_internal.h  system.c  window.c
